Update: Added some packages in the `packages.conf` file

--- a/packages.conf
+++ b/packages.conf
@@ -27,6 +27,7 @@ WINDOW_MANAGER=(
     swaync
     waybar
     whitesur-icon-theme
+    nwg-look
 )
 
 SYSTEM_UTILS=(
@@ -53,6 +54,7 @@ DESKTOP=(
     kitty
     mpv
     obsidian
+    obs-studio
     spotify-launcher
     thunar
     visual-studio-code-bin
@@ -88,7 +90,7 @@ LANGS=(
 
 
 LAPTOP=(
-    acpi
+    acpci
     brightnessctl
     broadcom-wl
     intel-ivsc-firmware
