Update: Added Some Packages Related To "Dependencies"
Added:

- gnome-keyring
- nodejs
- npm
- ntfs-3g

--- a/packages.conf
+++ b/packages.conf
@@ -1,9 +1,12 @@
 DEPENDENCIES=(
+    gnome-keyring
     gvfs
     gvfs-afc
     gvfs-mtp
     gvfs-nfs
     gvfs-smb
+    npm
+    ntfs-3g
     thunar-volman
     xdg-desktop-portal
     xdg-desktop-portal-hyprland
@@ -86,6 +89,7 @@ LANGS=(
     python3
     # so that kanata does not install 'rust' package
     rustup
+    nodejs
 )
 
 
@@ -102,6 +106,8 @@ SERVICES=(
     ly.service
     tlp.service
     ufw.service
+    # NOTE: remember to enable manually
+    # gnome-keyring-daemon.service
 )
 
 FONTS=(
