Update: Font and Gnome Keyring Service
- Installing the ligaturised version of Cascadia ( I think )
- Enabling 'gnome-keyring-daemon.service` automatically

--- a/packages.conf
+++ b/packages.conf
@@ -106,13 +106,12 @@ SERVICES=(
     ly.service
     tlp.service
     ufw.service
-    # NOTE: remember to enable manually
-    # gnome-keyring-daemon.service
+    gnome-keyring-daemon.service
 )
 
 FONTS=(
 	ttf-jetbrains-mono-nerd
-	ttf-cascadia-mono-nerd
+	ttf-cascadia-code-nerd
 	ttf-ibmplex-mono-nerd
 	ttf-iosevkaterm-nerd
 )
