Update: Preparing Script ==> Re-installing Operating System

--- a/packages.conf
+++ b/packages.conf
@@ -5,6 +5,7 @@ DEPENDENCIES=(
     gvfs-mtp
     gvfs-nfs
     gvfs-smb
+    networkmanager
     npm
     ntfs-3g
     thunar-volman
@@ -62,7 +63,7 @@ DESKTOP=(
     thunar
     visual-studio-code-bin
     zathura
-    brave-bin
+    zen-browser-bin
 )
 
 
@@ -87,7 +88,6 @@ DEVELOPMENT=(
 
 LANGS=(
     python3
-    # so that kanata does not install 'rust' package
     rustup
     nodejs
 )
@@ -111,7 +111,6 @@ SERVICES=(
 
 FONTS=(
 	ttf-jetbrains-mono-nerd
-	ttf-cascadia-code-nerd
 	ttf-ibmplex-mono-nerd
-	ttf-iosevkaterm-nerd
+	ttf-iosevka-nerd
 )
