U: Going to now write the main function quickly ( with the help of AI )

--- a/packages.conf
+++ b/packages.conf
@@ -103,7 +103,7 @@ LAPTOP=(
 
 
 SERVICES=(
-    ly.service
+    ly@tty2.service
     tlp.service
     ufw.service
     gnome-keyring-daemon.service
