U: I think we are ready!

--- a/packages.conf
+++ b/packages.conf
@@ -1,116 +1,98 @@
 DEPENDENCIES=(
+    brightnessctl
     gnome-keyring
     gvfs
-    gvfs-afc
     gvfs-mtp
-    gvfs-nfs
-    gvfs-smb
-    networkmanager
     npm
     ntfs-3g
-    thunar-volman
-    xdg-desktop-portal
-    xdg-desktop-portal-hyprland
-    xdg-desktop-portal-wlr
-    xwaylandvideobridge
-    zathura-pdf-mupdf
-)
-
-
-WINDOW_MANAGER=(
-    bibata-cursor-theme
-    flat-remix-gtk
-    hyprland
-    hyprpaper
-    hyprpicker
-    hyprshot
-    hyprutils
-    ly
-    pyprland
-    rofi
-    swaync
-    waybar
-    whitesur-icon-theme
-    nwg-look
-)
-
-SYSTEM_UTILS=(
-    btop
-    nvim
-    gdu
-    ldns
-    less
-    man-db
-    man-pages
-    openssh
-    pavucontrol
-    power-profiles-deamon
+    udisks2
     ufw
-    upower
-    wl-clipboard
     xdg-user-dirs
-    yazi
 )
 
+WAYLAND_COMMON=(
+    dunst
+    grim
+    polkit-gnome
+    slurp
+    swayidle
+    swaylock
+    swww
+    wl-clipboard
+    xorg-xwayland
+)
 
-DESKTOP=(
-    discord
+NIRI=(
+  niri
+)
+
+HYPRLAND=(
+    hyprland
+    hyprshot
+    pyprland
+    xdg-desktop-portal-gtk
+    xdg-desktop-portal-hyprland
+)
+
+APPEARANCE=(
+    bibata-cursor-theme-bin
+    graphite-gtk-theme
+    nwg-look
+    whitesur-icon-theme
+)
+
+APPLICATIONS=(
     kitty
-    mpv
     obsidian
-    obs-studio
-    spotify-launcher
-    thunar
-    visual-studio-code-bin
+    pavucontrol
+    ristretto
+    rofi
+    thorium-browser-bin
+    waybar
     zathura
-    zen-browser-bin
 )
 
-
-DEVELOPMENT=(
-    bat
+CLI_TOOLS=(
+    btop
     eza
     fd
     fzf
-    github-cli
     lazygit
-    neovim
     ripgrep
-    starship
-    tldr
-    tmux
     zoxide
+)
+
+SHELL=(
     zsh
     zsh-autosuggestions
     zsh-syntax-highlighting
 )
 
+FONTS=(
+    ttf-ibmplex-mono-nerd
+    ttf-iosevka-nerd
+    ttf-jetbrains-mono-nerd
+)
 
 LANGS=(
-    python3
-    rustup
-    nodejs
+  jdk-openjdk
+  node
+  python
+  rustup
 )
 
-
-LAPTOP=(
-    acpci
-    brightnessctl
-    broadcom-wl
-    intel-ivsc-firmware
-    tlp
+EXTRAS=(
+    # bluetui
 )
 
+OLD_LAPTOP=(
+  broadcom-wl
+  intel-ivsc-firmware
+)
 
 SERVICES=(
-    ly@tty2.service
-    tlp.service
-    ufw.service
-    gnome-keyring-daemon.service
-)
-
-FONTS=(
-	ttf-jetbrains-mono-nerd
-	ttf-ibmplex-mono-nerd
-	ttf-iosevka-nerd
+  gnome-keyring-daemon.service
+  ly@tty2.service
+  power-profiles-daemon
+  ufw.service
 )
