U: Going to now try to configure and use Niri!

--- a/packages.conf
+++ b/packages.conf
@@ -19,18 +19,20 @@ WAYLAND_COMMON=(
     swaylock
     swww
     wl-clipboard
+    xdg-desktop-portal-gtk
     xorg-xwayland
 )
 
 NIRI=(
   niri
+  wlopm
+  xdg-desktop-portal-gnome
 )
 
 HYPRLAND=(
     hyprland
     hyprshot
     pyprland
-    xdg-desktop-portal-gtk
     xdg-desktop-portal-hyprland
 )
 
