--- a/packages.conf
+++ b/packages.conf
@@ -38,8 +38,10 @@ HYPRLAND=(
 )
 
 APPEARANCE=(
+    banana-cursor-bin
     bibata-cursor-theme-bin
     graphite-gtk-theme
+    macos-tahoe-cursor
     nwg-look
     whitesur-icon-theme
 )
@@ -72,9 +74,21 @@ SHELL=(
 )
 
 FONTS=(
+    noto-fonts
+    noto-fonts-cjk
+    noto-fonts-emoji
+    noto-fonts-extra
+    otf-geist-mono-nerd
+    otf-monaspace-nerd
+    ttf-cascadia-code-nerd
+    ttf-dejavu-nerd
+    ttf-firacode-nerd
     ttf-ibmplex-mono-nerd
     ttf-iosevka-nerd
+    ttf-iosevka-nerd
     ttf-jetbrains-mono-nerd
+    ttf-sourcecodepro-nerd
+    ttf-victor-mono-nerd
 )
 
 LANGS=(
