U: Added missing packages

--- a/packages.conf
+++ b/packages.conf
@@ -13,6 +13,7 @@ DEPENDENCIES=(
 WAYLAND_COMMON=(
     dunst
     grim
+    ly
     polkit-gnome
     slurp
     swayidle
@@ -47,23 +48,30 @@ APPEARANCE=(
 )
 
 APPLICATIONS=(
+    discord
     kitty
+    obs-studio
     obsidian
     pavucontrol
     ristretto
     rofi
     thorium-browser-bin
+    thunar
     waybar
     zathura
 )
 
 CLI_TOOLS=(
     btop
+    deno
     eza
     fd
     fzf
     lazygit
+    nvim
+    pnpm
     ripgrep
+    yazi
     zoxide
 )
 
@@ -100,6 +108,8 @@ LANGS=(
 
 EXTRAS=(
     bluetui
+    calf
+    easyeffects
     envycontrol
 )
 
@@ -109,7 +119,7 @@ OLD_LAPTOP=(
 )
 
 SERVICES=(
-  gnome-keyring-daemon.service
+  gnome-keyring-daemon.socket
   ly@tty2.service
   power-profiles-daemon
   ufw.service
