U: Added needed packages to install

--- a/packages.conf
+++ b/packages.conf
@@ -8,6 +8,7 @@ DEPENDENCIES=(
     udisks2
     ufw
     xdg-user-dirs
+    zathura-pdf-poppler
 )
 
 WAYLAND_COMMON=(
@@ -72,6 +73,7 @@ CLI_TOOLS=(
     nvim
     pnpm
     ripgrep
+    tmux
     yazi
     zoxide
 )
